patches/005_gateways/004_gateway_public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: ingress-gateways
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate

      # Gateway relies on SNI.
      # Below config only to satisfy the requirement of having at least one certificate reference
      certificateRefs:
      - name: dummy.invalid
